2007-05-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/machine/endian.h: Remove.
	* libnetworking/Makefile.am: Remove machine/endian.h.
	* libnetworking/arpa/nameser_compat.h, libnetworking/netinet/in.h,
	libnetworking/rtems/rtems_bsdnet_internal.h: Include
	<rtems/endian.h> instead of <machine/endian.h>.
	* Makefile.am: Add include/rtems/endian.h.
	* include/rtems/endian.h: New (Copied from
	  libnetworking/machine/endian.h).

2007-05-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/src/readdir.c, libnetworking/net/slcompress.c,
	pppd/md4.h, pppd/md5.h, pppd/pppd.h,
	score/cpu/m68k/rtems/score/m68k.h: Include <rtems/stdint.h> instead
	of <stdint.h>.
	* libnetworking/machine/endian.h: Remove
	  CPU_HAS_OWN_HOST_TO_NETWORK_ROUTINES.
	* NEWS: new.

2007-05-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1243
	* pppd/auth.c (set_allowed_addrs): Remove bogus dereference. 

2007-05-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/machine/endian.h: Convert htons, htonl, ntohs, ntohl
	to inline functions, using uint[16,32]_t. 
	* libnetworking/netdb.h: Change netent->n_net to uint32_t to comply
	with SUSv3.
	* telnetd/icmds.c: Add HAVE_CONFIG_H magic.
	* rtems/src/regionprocessqueue.c, score/src/heapresizeblock.c
	score/src/threadqrequeue.c, ftpd/ftpd.c, libblock/src/show_bdbuf.c:
	Add HAVE_CONFIG_H magic.
	* libnetworking/libc/gethostbydns.c, 
	libnetworking/libc/inet_net_ntop.c,
	libnetworking/libc/inet_pton.c: Eliminate __P.
	* librpc/src/rpc/rtime.c: Use uint32_t instead of unsigned long for
	return value of ntohl (POSIX requirement). 
	Use UINT32_C macros to avoid overflows on 16bit targets.
	Eliminate __P.
	* configure.ac: Check for working PRIxPTR.

2007-05-08	Ralf Corsépius <ralf.corsepius@rtems.org>

	* score/include/rtems/score/thread.h, score/inline/rtems/score/stack.inl
	score/src/threadinitialize.c, score/src/threadstackallocate.c:
	Use size_t for stack sizes.

2007-05-03	Joel Sherrill <joel@OARcorp.com>
