@@ -1,3 +1,8 @@
+2007-05-09	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* libmisc/monitor/mon-monitor.c, libmisc/monitor/mon-server.c: Do not
+	reference _Configuration_MP_table if multiprocessing is disabled.
+
 2007-05-09	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* libnetworking/machine/endian.h: Remove.
